--- a/html/tokyo.html
+++ b/html/tokyo.html
@@ -6,37 +6,7 @@
     <title>Tokyo</title>
 
     <link rel="icon" href="../imagens/icone.png" />
-
-    <style>
-
-        body {
-            background-color: #20011c;
-        }
-
-        h1 {
-            color: #ef0350;
-        }
-
-        h2 {
-            color: #ef0350;
-        }
-
-        p {
-            color: #ffd900;
-        }
-
-        table {
-            color: #ffd900;
-        }
-
-        ul {
-            color: #ffd900;
-        }
-
-        a {
-            color: #ef0350;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/tokyo.css"/>
 </head>
 
 <body>
@@ -96,7 +66,7 @@
         <li>Torre de Tóquio</li>
         <li>Santuário Meiji</li>
         <li>Palácio Imperial do Japão</li>
-        <li>Tóqui Skytree</li>
+        <li>Tóquio Skytree</li>
     </ul>
 
     <a href="tokyo2.html"> Próxima página> </a>
