--- a/html/tokyo2.html
+++ b/html/tokyo2.html
@@ -3,30 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-
     <title>Tokyo</title>
-    <style>
-
-        body {
-            background-color: #20011c;
-        }
-
-        h1 {
-            color: #ef0350;
-        }
-
-        h2 {
-            color: #ef0350;
-        }
-
-        ol {
-            color: #ffd900;
-        }
-
-        a {
-            color: #ef0350;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="../css/tokyo.css" />
 </head>
 
 <body>
