--- a/html/gotham2.html
+++ b/html/gotham2.html
@@ -6,29 +6,7 @@
     <title>Gotham City</title>
 
     <link rel="icon" href="../imagens/icone.png" />
-
-    <style>
-
-        body {
-            background-color: black;
-        }
-
-        h1 {
-            color: #d85802;
-        }
-
-        h2 {
-            color: #d85802;
-        }
-
-        ol {
-            color: #d8c302;
-        }
-
-        a {
-            color: #d85802;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/gotham.css" />
 </head>
 
 <body>
