Página adaptada ao layout novo através do CSS

--- a/html/gotham.html
+++ b/html/gotham.html
@@ -6,61 +6,125 @@
     <title>Gotham City</title>
 
     <link rel="icon" href="../imagens/icone.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/gotham.css" />
 </head>
 
 <body>
-    <h1>Gotham City</h1>
-    <img src=../imagens/gotham-city.jpg width="100%" alt="Imagem panorâmica da Cidade de Gotham" />
 
-    <h2>Sobre a cidade</h2>
-    <p>Localizada no Condado de Kane, no estado de Nova Jersey, Gotham City fica em uma baía homônima que se abre a
-        partir da foz do rio também de mesmo nome no Oceano Atlântico. Fica ao sul de Nova York e ao norte de
-        Metrópolis, fazendo fronteira com os condados de Hudson acima e Haven ao oeste.</p>
+    <!--- Topo -->
+    <div class="topo">
+        <div class="container">
+            <div class="logo">
+                <img src="../imagens/logo-cidades.png" alt="Logotipo Cidades" />
+            </div>
 
-    <p>O que chamamos de Gotham, hoje, é na verdade um conjunto de várias ilhas (quase 10) dispostas unidas em meio à
-        foz do rio Gotham, formando a Baía de Gotham. O rio Gotham nasce nas montanhas do norte e percorre 120km até a
-        foz onde está a cidade. Atualmente, o território de Gotham ocupa não somente as ilhas, mas uma estreita zona
-        continental às margens da baía, indo desde o norte até o sudoeste.</p>
+            <div class="menu">
+                <ul>
+                    <li><a href="gotham.html"> Início </li>
+                    <li><a href="gotham2.html"> Complemento</a></li>
+                    <li><a href="#"> Sugestão</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-    <p>Como grande parte da Costa Leste norte-americana, a região onde hoje se encontra Gotham foi colonizada
-        inicialmente pelos holandeses a serviço do Conde Maurício de Nassau que lá chegaram em 1609. Depois, com a
-        chegada de colonos britânicos, teve início um conflito aberto. Os britânicos eram protestantes exilados da
-        Inglaterra e, principalmente, da Escócia, dentre os quais representantes das famílias ilustres da cidade até
-        hoje.</p>
 
-    <h2>Informações</h2>
-    <table width="600px" border="1">
+    <!-- Título-->
+    <div class="pagina-titulo">
+        <h1>Gotham City</h1>
+    </div>
 
-        <tr>
-            <td>País</td>
-            <td>Estados Unidos</td>
-        </tr>
-        <tr>
-            <td>Estado</td>
-            <td>Nova Jersey</td>
-        </tr>
-        <tr>
-            <td>População</td>
-            <td>8,168,564</td>
-        </tr>
-        <tr>
-            <td>Área</td>
-            <td>846,9 km²</td>
-        </tr>
-    </table>
 
-    <h2>Lista de locais de interesse</h2>
-    <ul>
-        <li>Torre do Relógio</li>
-        <li>Parque Robinson</li>
-        <li>Memorial ao Lanterna Verde</li>
-        <li>Ponte Westward</li>
-        <li>Estátua da Justiça</li>
-    </ul>
+    <!--Imagem Principal-->
+    <div class="Imagem-principal">
+        <img src=../imagens/gotham-city.jpg width="100%" alt="Imagem panorâmica da Cidade de Gotham" />
+    </div>
 
-    <a href="gotham2.html"> Próxima página> </a>
 
+    <!-- Descrição sobre a cidade -->
+    <div class="pagina-descricao">
+        <div class="container">
+            <div class="titulo-modulo">
+                <h2>Sobre a cidade</h2>
+            </div>
+            <div class="pagina-descricao-texto">
+                <p>Localizada no Condado de Kane, no estado de Nova Jersey, Gotham City fica em uma baía homônima que se
+                    abre a partir da foz do rio também de mesmo nome no Oceano Atlântico. Fica ao sul de Nova York e ao norte
+                    de Metrópolis, fazendo fronteira com os condados de Hudson acima e Haven ao oeste.</p>
+                <br><br>
+                <p>O que chamamos de Gotham, hoje, é na verdade um conjunto de várias ilhas (quase 10) dispostas unidas
+                    em meio à foz do rio Gotham, formando a Baía de Gotham. O rio Gotham nasce nas montanhas do norte e percorre
+                    120km até a foz onde está a cidade. Atualmente, o território de Gotham ocupa não somente as ilhas,
+                    mas uma estreita zona continental às margens da baía, indo desde o norte até o sudoeste.</p>
+                    <br><br>    
+                <p>Como grande parte da Costa Leste norte-americana, a região onde hoje se encontra Gotham foi
+                    colonizada inicialmente pelos holandeses a serviço do Conde Maurício de Nassau que lá chegaram em 1609. Depois,
+                    com a chegada de colonos britânicos, teve início um conflito aberto. Os britânicos eram protestantes
+                    exilados da Inglaterra e, principalmente, da Escócia, dentre os quais representantes das famílias
+                    ilustres da cidade até hoje.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Tabela de informações -->
+    <div class="pagina-tabela">
+        <div class="titulo-modulo">
+            <h2>Informações</h2>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Informação:</th>
+                    <th>Valor:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>País</td>
+                    <td>Estados Unidos</td>
+                </tr>
+                <tr>
+                    <td>Estado</td>
+                    <td>Nova Jersey</td>
+                </tr>
+                <tr>
+                    <td>População</td>
+                    <td>8,168,564</td>
+                </tr>
+                <tr>
+                    <td>Área</td>
+                    <td>846,9 km²</td>
+                </tr>
+        </tbody>
+        </table>
+    </div>
+
+    <!-- Lista -->
+    <div class="pagina-lista">
+        <div class="container">
+            <div class="titulo-modulo">
+                <h2>Lista de locais de interesse</h2>
+            </div>
+            <ul>
+                <li>Torre do Relógio</li>
+                <li>Parque Robinson</li>
+                <li>Memorial ao Lanterna Verde</li>
+                <li>Ponte Westward</li>
+                <li>Estátua da Justiça</li>
+            </ul>
+        </div>
+    </div>
+    <!-- Rodapé -->
+    <div class="rodape">
+        <div class="logo-rodape">
+            <img src="../imagens/logo-cidades-rodape.png" alt="Logo cidades"/>
+        </div>
+
+        <dic class="assinatura">
+            <p>Code by Pedro Chaves in 2020</p>
+        </dic>
+    </div>
 </body>
 
 </html>
