--- a/html/gotham2.html
+++ b/html/gotham2.html
@@ -6,22 +6,69 @@
     <title>Gotham City</title>
 
     <link rel="icon" href="../imagens/icone.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/gotham.css" />
 </head>
 
 <body>
-    <h1>Gotham City - Página 2</h1>
-    <h2>Mapa da cidade</h2>
-    <img src=../imagens/mapa-gotham.jpg alt="Imagem do Mapa de Gotham" width=250 />
-    <h2>Principais celebridades e notáveis da cidade</h2>
-    <ol>
-        <li>Bruce Wayne</li>
-        <li>Barbara Gordon</li>
-        <li>Jason Todd</li>
-        <li>Damian Wayne</li>
-        <li>Coringa</li>
-    </ol>
+    <!--- Topo -->
+    <div class="topo">
+        <div class="container">
+            <div class="logo">
+                <img src="../imagens/logo-cidades.png" alt="Logotipo Cidades" />
+            </div>
 
-    <a href="gotham.html">< Página Anterior</a> 
-    </body>
-    </html>
+            <div class="menu">
+                <ul>
+                    <li><a href="gotham.html"> Início </li>
+                    <li><a href="gotham2.html"> Complemento</a></li>
+                    <li><a href="#"> Sugestão</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- Título-->
+    <div class="pagina-titulo">
+        <h1>Gotham City - Página 2</h1>
+    </div>
+
+
+    <!--Mapa Da Cidade-->
+    <div class="pagina-mapa"></div>
+    <div class="titulo-modulo">
+        <h2>Mapa da cidade</h2>
+    </div>
+    <div class="imagem-mapa">
+        <img src=../imagens/mapa-gotham.jpg alt="Imagem do Mapa de Gotham" width=250 />
+    </div>
+    </div>
+
+    <div class="pagina-lista">
+        <div class="container">
+            <div class="titulo-modulo">
+                <h2>Principais celebridades e notáveis da cidade</h2>
+            </div>
+            <ol>
+                <li>Bruce Wayne</li>
+                <li>Barbara Gordon</li>
+                <li>Jason Todd</li>
+                <li>Damian Wayne</li>
+                <li>Coringa</li>
+            </ol>
+        </div>
+    </div>
+</body>
+
+<!-- Rodapé -->
+<div class="rodape">
+    <div class="logo-rodape">
+        <img src="../imagens/logo-cidades-rodape.png" alt="Logo cidades" />
+    </div>
+
+    <dic class="assinatura">
+        <p>Code by Pedro Chaves in 2020</p>
+    </dic>
+</div>
+</body>
+
+</html>
