--- a/html/tokyo2.html
+++ b/html/tokyo2.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>Tokyo</title>
     
+    <link rel="icon" href="../imagens/icone.png" />
     <link rel="stylesheet" href="../css/tokyo.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 </head>
 
 <body>
