--- a/html/tokyo.html
+++ b/html/tokyo.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" href="../imagens/icone.png" />
     <link rel="stylesheet" href="../css/tokyo.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 </head>
 
 <body>
